--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "Yared b.",
@@ -12,15 +13,19 @@
     "axios": "^1.7.2",
     "child_process": "^1.0.2",
     "cookie-parser": "^1.4.6",
-    "dot": "^1.1.3",
-    "env": "^0.0.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
+    "express-rate-limit": "^7.3.1",
     "express-session": "^1.18.0",
     "express-static-gzip": "^2.1.7",
     "helmet": "^7.1.0",
     "mysql2": "^3.10.1",
     "web-push": "^3.6.7"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "cors": "^2.8.5",
+    "nodemon": "^3.1.4"
+  }
 }
